--- a/6_yaml/pipeline.yaml
+++ b/6_yaml/pipeline.yaml
@@ -1,7 +1,7 @@
 name: $(BuildID)
 trigger: none
 pool:
-  vmImage: 'ubuntu-16.04'
+  vmImage: 'ubuntu-latest'
 variables:
   base_dir: $(System.DefaultWorkingDirectory)/6_yaml
   install_script_dir: $(System.DefaultWorkingDirectory)/1_base
